--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
           </div>
           <div class="team-info">
             <h3 class="team-name">Näf Romana</h3>
-            <p class="team-role" data-de="Präsidentin" data-en="President">President</p>
-            <p class="team-desc" data-de="Hier kommt eine kurze Beschreibung der Person und ihrer Aufgaben bei She Shapes Tech." data-en="Here comes a short description of the person and their tasks at She Shapes Tech.">Here comes a short description of the person and their tasks at She Shapes Tech.</p>
+            <p class="team-role" data-de="kommt bald..." data-en="coming soon...">President</p>
+            <p class="team-desc" data-de="kommt bald..." data-en="coming soon...">Here comes a short description of the person and their tasks at She Shapes Tech.</p>
           </div>
         </div>
 
@@ -318,8 +318,8 @@
           </div>
           <div class="team-info">
             <h3 class="team-name">Solenthaler Nicole</h3>
-            <p class="team-role" data-de="Vizepräsidentin" data-en="Vice President">Vice President</p>
-            <p class="team-desc" data-de="Hier kommt eine kurze Beschreibung der Person und ihrer Aufgaben bei She Shapes Tech." data-en="Here comes a short description of the person and their tasks at She Shapes Tech.">Here comes a short description of the person and their tasks at She Shapes Tech.</p>
+            <p class="team-role" data-de="kommt bald..." data-en="coming soon...">Vice President</p>
+            <p class="team-desc" data-de="kommt bald..." data-en="coming soon...">Here comes a short description of the person and their tasks at She Shapes Tech.</p>
           </div>
         </div>
 
@@ -335,8 +335,8 @@
           </div>
           <div class="team-info">
             <h3 class="team-name">Conradt Monika</h3>
-            <p class="team-role" data-de="Event-Koordinatorin" data-en="Event Coordinator">Event Coordinator</p>
-            <p class="team-desc" data-de="Hier kommt eine kurze Beschreibung der Person und ihrer Aufgaben bei She Shapes Tech." data-en="Here comes a short description of the person and their tasks at She Shapes Tech.">Here comes a short description of the person and their tasks at She Shapes Tech.</p>
+            <p class="team-role" data-de="kommt bald..." data-en="coming soon...">Event Coordinator</p>
+            <p class="team-desc" data-de="kommt bald..." data-en="coming soon...">Here comes a short description of the person and their tasks at She Shapes Tech.</p>
           </div>
         </div>
 
@@ -352,8 +352,8 @@
           </div>
           <div class="team-info">
             <h3 class="team-name">Stecher Jennifer</h3>
-            <p class="team-role" data-de="Social Media" data-en="Social Media">Social Media</p>
-            <p class="team-desc" data-de="Hier kommt eine kurze Beschreibung der Person und ihrer Aufgaben bei She Shapes Tech." data-en="Here comes a short description of the person and their tasks at She Shapes Tech.">Here comes a short description of the person and their tasks at She Shapes Tech.</p>
+            <p class="team-role" data-de="kommt bald..." data-en="coming soon...">Social Media</p>
+            <p class="team-desc" data-de="kommt bald..." data-en="coming soon...">Here comes a short description of the person and their tasks at She Shapes Tech.</p>
           </div>
         </div>
       </div>
